fix(naviagtion): only show scrollbar when nessecary

--- a/app/client/stylesheets/components/pu-header.sass
+++ b/app/client/stylesheets/components/pu-header.sass
@@ -11,7 +11,7 @@
         @extend %clearfix
 
         > div
-            overflow-x: scroll
+            overflow-x: auto
             overflow-y: hidden
             transition: height 0ms
 
