--- a/app/client/stylesheets/components/pu-partupheader.sass
+++ b/app/client/stylesheets/components/pu-partupheader.sass
@@ -6,6 +6,7 @@
 
     > .pu-sub-title
         padding: 15px 20px 15px 40px
+        white-space: normal
 
         h1
             font-family: $font-secondary
